TAG: uniprotload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: uniprotload-5-1-1-3
DATE: 12/27/2012
STAFF: lec
CHANGES:
1) TR11221/add EMBL to files/bucketization

TAG: uniprotload-5-1-1-2
DATE: 12/20/2012
STAFF: lec
CHANGES:
1) TR11221/add EMBL to files/bucketization

TAG: uniprotload-5-1-1-1
DATE: 11/02/2012
STAFF: dbm
CHANGES:
1) Config changes for TR11163

TAG: uniprotload-5-0-0-5
DATE: 06/06/2012
STAFF: lec
CHANGES:
1) TR11071; replace search by UniProt Name with search by UniProt EMBL ID
UNIPROT_SP_ASSOC_MGI_FILE

TAG: uniprotload-5-0-0-4
DATE: 05/15/2012
STAFF: lec
CHANGES:
1) TR11071
UNIPROT_SP_ASSOC_MGI_FILE

TAG: uniprotload-5-0-0-3
DATE: 05/09/2012
STAFF: lec
CHANGES:
1) TR11054
UNIPROT_ACC_ASSOC_ERR_FILE file
UNIPROT_SP_ASSOC_ERR_FILE
UNIPROT_TR_ASSOC_ERR_FILE
error files of uniprot ids that contain neither EntrezGene nor Ensembl ids

TAG: uniprotload-5-0-0-2
TAG: uniprotload-5-0-0-1
DATE: 04/03/2012, 04/11/2012
STAFF: lec
CHANGES:
1) TR11030/prevent use of GO:0005488

TAG: uniprotload-4-4-1-8
TAG: uniprotload-4-4-1-7
DATE: 03/05/2012
STAFF: lec
CHANGES:
1) TR10950
/data/downloads/ftp.geneontology.org/pub/go/external2go/spkw2go 
	changed to 'uniprotkb_kw2go'
within this file:
field 1: 'SP_KW' changed to 'UniProtKB-KW'

TAG: uniprotload-4-4-1-6
DATE: 01/03/2012
STAFF: lec
CHANGES:
1) TR10934/makeGOAnnot.py
   change comma delimiter to pipe
2) uniprotload.sh
   remove *.diagnostic and *.error

TAG: uniprotload-4-4-1-5
TAG: uniprotload-4-4-1-4
DATE: 09/15/2011
STAFF: lec
CHANGES:
1) mgi_uniprot.1_0.py; called from makeBuckets.sh

TAG: uniprotload-4-4-1-3
DATE: 06/23/2011
STAFF: lec
CHANGES:
1) makeGOAnnot.py; readMGI2MARKERTYPE; was skipping first line of file

TAG: uniprotload-4-4-1-2
DATE: 02/28/2011
STAFF: lec
CHANGES:
1) makeGOAnnot.py; EC; if markers is not in mgi_acc_assoc.txt, then skip

TAG: uniprotload-4-4-1-1
DATE: 01/11/2011
STAFF: lec
CHANGES:
1) TR10521/prevent use of GO:0005515

TAG: uniprotload-4-4-0-6