@@ -1,3 +1,9 @@
+TAG: uniprotload-5-2-0-1
+DATE: 10/20/2014
+STAFF: lec
+CHANGES:
+1) TR11817/UniProtParser.py/DE changes
+
 TAG: uniprotload-5-1-7-1
 DATE: 01/28/2014
 STAFF: lec
